--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: 16.x
           cache: yarn
+          cache-dependency-path: "./package-lock.json"
       - name: Install dependencies
         run: yarn install --frozen-lockfile --non-interactive
       - name: Build
